fixed center align

--- a/assets/section-button.css
+++ b/assets/section-button.css
@@ -1,4 +1,3 @@
 .section-button {
-    display:flex;
-    align-items:center;
+    text-align:center
 }
